force-app/main/default/objects/Contact/fields/HistoricalLeatherGoodSpendUSD__c.field-meta.xml
<CustomField>
    <fullName>HistoricalLeatherGoodSpendUSD__c</fullName>
    <label>Historical Leather Good Spend (USD)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>