force-app/main/default/objects/Contact/fields/HistoricalLeatherGoodSpendYEN__c.field-meta.xml
<CustomField>
    <fullName>HistoricalLeatherGoodSpendYEN__c</fullName>
    <label>Historical Leather Good Spend (YEN)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>