force-app/main/default/objects/Contact/fields/HistoricalLeatherGoodSpendYUAN__c.field-meta.xml
<CustomField>
    <fullName>HistoricalLeatherGoodSpendYUAN__c</fullName>
    <label>Historical Leather Good Spend (YUAN)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>