force-app/main/default/objects/Contact/fields/HistoricalNbrProducts__c.field-meta.xml
<CustomField>
    <fullName>HistoricalNbrProducts__c</fullName>
    <label>Historical # Products</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>