force-app/main/default/objects/Contact/fields/HistoricalPerfumeNbrProducts__c.field-meta.xml
<CustomField>
    <fullName>HistoricalPerfumeNbrProducts__c</fullName>
    <label>Historical Perfume # Products</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>