force-app/main/default/objects/Contact/fields/HistoricalPerfumeSpendEUR__c.field-meta.xml
<CustomField>
    <fullName>HistoricalPerfumeSpendEUR__c</fullName>
    <label>Historical Perfume Spend (EUR)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>