force-app/main/default/objects/Contact/fields/HistoricalPerfumeSpendUSD__c.field-meta.xml
<CustomField>
    <fullName>HistoricalPerfumeSpendUSD__c</fullName>
    <label>Historical Perfume Spend (USD)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>