force-app/main/default/objects/Contact/fields/HistoricalPerfumeSpendYEN__c.field-meta.xml
<CustomField>
    <fullName>HistoricalPerfumeSpendYEN__c</fullName>
    <label>Historical Perfume Spend (YEN)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>