force-app/main/default/objects/Contact/fields/HistoricalPerfumeSpendYUAN__c.field-meta.xml
<CustomField>
    <fullName>HistoricalPerfumeSpendYUAN__c</fullName>
    <label>Historical Perfume Spend (YUAN)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>