force-app/main/default/objects/Contact/fields/HistoricalReadyToWearNbrProducts__c.field-meta.xml
<CustomField>
    <fullName>HistoricalReadyToWearNbrProducts__c</fullName>
    <label>Historical Ready to Wear  # Products</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>