force-app/main/default/objects/Contact/fields/HistoricalReadyToWearSpendEUR__c.field-meta.xml
<CustomField>
    <fullName>HistoricalReadyToWearSpendEUR__c</fullName>
    <label>Historical Ready to Wear  Spend (EUR)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>