force-app/main/default/objects/Contact/fields/HistoricalReadyToWearSpendUSD__c.field-meta.xml
<CustomField>
    <fullName>HistoricalReadyToWearSpendUSD__c</fullName>
    <label>Historical Ready to Wear  Spend (USD)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>