force-app/main/default/objects/Contact/fields/HistoricalReadyToWearSpendYEN__c.field-meta.xml
<CustomField>
    <fullName>HistoricalReadyToWearSpendYEN__c</fullName>
    <label>Historical Ready to Wear  Spend (YEN)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>