force-app/main/default/objects/Contact/fields/HistoricalReadyToWearSpendYUAN__c.field-meta.xml
<CustomField>
    <fullName>HistoricalReadyToWearSpendYUAN__c</fullName>
    <label>Historical Ready to Wear  Spend (YUAN)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>