force-app/main/default/objects/Contact/fields/HistoricalShoesNbrProducts__c.field-meta.xml
<CustomField>
    <fullName>HistoricalShoesNbrProducts__c</fullName>
    <label>Historical Shoes # Products</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>