force-app/main/default/objects/Contact/fields/HistoricalShoesSpendEUR__c.field-meta.xml
<CustomField>
    <fullName>HistoricalShoesSpendEUR__c</fullName>
    <label>Historical Shoes Spend (EUR)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>