force-app/main/default/objects/Contact/fields/HistoricalShoesSpendUSD__c.field-meta.xml
<CustomField>
    <fullName>HistoricalShoesSpendUSD__c</fullName>
    <label>Historical Shoes Spend (USD)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>