force-app/main/default/objects/Contact/fields/HistoricalShoesSpendYEN__c.field-meta.xml
<CustomField>
    <fullName>HistoricalShoesSpendYEN__c</fullName>
    <label>Historical Shoes Spend (YEN)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>