force-app/main/default/objects/Contact/fields/HistoricalShoesSpendYUAN__c.field-meta.xml
<CustomField>
    <fullName>HistoricalShoesSpendYUAN__c</fullName>
    <label>Historical Shoes Spend (YUAN)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>