force-app/main/default/objects/Contact/fields/HistoricalSpendEUR__c.field-meta.xml
<CustomField>
    <fullName>HistoricalSpendEUR__c</fullName>
    <label>Historical Spend (EUR)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>