force-app/main/default/objects/Contact/fields/HistoricalSpendUSD__c.field-meta.xml
<CustomField>
    <fullName>HistoricalSpendUSD__c</fullName>
    <label>Historical Spend (USD)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>