force-app/main/default/objects/Contact/fields/HistoricalSpendYEN__c.field-meta.xml
<CustomField>
    <fullName>HistoricalSpendYEN__c</fullName>
    <label>Historical Spend (YEN)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>