force-app/main/default/objects/Contact/fields/HistoricalSpendYUAN__c.field-meta.xml
<CustomField>
    <fullName>HistoricalSpendYUAN__c</fullName>
    <label>Historical Spend (YUAN)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>