force-app/main/default/objects/Contact/fields/HistoricalWatchNbrProducts__c.field-meta.xml
<CustomField>
    <fullName>HistoricalWatchNbrProducts__c</fullName>
    <label>Historical Watch # Products</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>