force-app/main/default/objects/Contact/fields/HistoricalWatchSpendEUR__c.field-meta.xml
<CustomField>
    <fullName>HistoricalWatchSpendEUR__c</fullName>
    <label>Historical Watch Spend (EUR)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>