force-app/main/default/objects/Contact/fields/HistoricalWatchSpendUSD__c.field-meta.xml
<CustomField>
    <fullName>HistoricalWatchSpendUSD__c</fullName>
    <label>Historical Watch Spend (USD)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>