force-app/main/default/objects/Contact/fields/HistoricalWatchSpendYUAN__c.field-meta.xml
<CustomField>
    <fullName>HistoricalWatchSpendYUAN__c</fullName>
    <label>Historical Watch Spend (YUAN)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>