force-app/main/default/objects/Contact/fields/HistQtePurchaseCapucines__c.field-meta.xml
<CustomField>
    <fullName>HistQtePurchaseCapucines__c</fullName>
    <label>HistQtePurchaseCapucines</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>