force-app/main/default/objects/Contact/fields/HistTotalDollarCapucines__c.field-meta.xml
<CustomField>
    <fullName>HistTotalDollarCapucines__c</fullName>
    <label>HistTotalDollarCapucines</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>