force-app/main/default/objects/Contact/fields/HistTotalEuroCapucines__c.field-meta.xml
<CustomField>
    <fullName>HistTotalEuroCapucines__c</fullName>
    <label>HistTotalEuroCapucines</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>