force-app/main/default/objects/Contact/fields/HistTotalYenCapucines__c.field-meta.xml
<CustomField>
    <fullName>HistTotalYenCapucines__c</fullName>
    <label>HistTotalYenCapucines</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>