force-app/main/default/objects/Contact/fields/HistTotalYuanCapucines__c.field-meta.xml
<CustomField>
    <fullName>HistTotalYuanCapucines__c</fullName>
    <label>HistTotalYuanCapucines</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>