force-app/main/default/objects/Contact/fields/HomeAddressCountryCode__c.field-meta.xml
<CustomField>
    <fullName>HomeAddressCountryCode__c</fullName>
    <label>Home Address Country Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>