force-app/main/default/objects/Contact/fields/Invited__c.field-meta.xml
<CustomField>
    <fullName>Invited__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether or not the client has been invited to an event</description>
    <label>Invited to a PCR event</label>
    <type>Checkbox</type>
</CustomField>