force-app/main/default/objects/Contact/fields/IsAttachedToResdtCtry__c.field-meta.xml
<CustomField>
    <fullName>IsAttachedToResdtCtry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAttachedToResdtCtry</label>
    <type>Checkbox</type>
</CustomField>