force-app/main/default/objects/Contact/fields/IsProspect__c.field-meta.xml
<CustomField>
    <fullName>IsProspect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Prospect</label>
    <type>Checkbox</type>
</CustomField>