force-app/main/default/objects/Contact/fields/JewelleryInterest__c.field-meta.xml
<CustomField>
    <fullName>JewelleryInterest__c</fullName>
    <description>Jewellery Interest</description>
    <label>Jewelry</label>
    <length>80</length>
    <type>Text</type>
</CustomField>