force-app/main/default/objects/Contact/fields/Language_IMG__c.field-meta.xml
<CustomField>
    <fullName>Language_IMG__c</fullName>
    <formula>IF(
  ISBLANK(TEXT(PreferredLanguage__c)),
  &apos;&apos;,
  IMAGE(&quot;/resource/iconics/images/lang/&quot; + TEXT(PreferredLanguage__c) + &quot;.png&quot;,TEXT(PreferredLanguage__c),30,30)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Language</label>
    <type>Text</type>
</CustomField>