force-app/main/default/objects/Contact/fields/Last36MAccessoriesNbrProducts__c.field-meta.xml
<CustomField>
    <fullName>Last36MAccessoriesNbrProducts__c</fullName>
    <label>Last 36M Accessories # Products</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>