force-app/main/default/objects/Contact/fields/Last36MAccessoriesSpendYEN__c.field-meta.xml
<CustomField>
    <fullName>Last36MAccessoriesSpendYEN__c</fullName>
    <label>Last 36M Accessories Spend (YEN)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>