force-app/main/default/objects/Contact/fields/Last36MAccessoriesSpendYUAN__c.field-meta.xml
<CustomField>
    <fullName>Last36MAccessoriesSpendYUAN__c</fullName>
    <label>Last 36M Accessories Spend (RMB)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>