force-app/main/default/objects/Contact/fields/Last36MJewelryNbrProducts__c.field-meta.xml
<CustomField>
    <fullName>Last36MJewelryNbrProducts__c</fullName>
    <label>Last 36M Jewelry # Products</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>