force-app/main/default/objects/Contact/fields/Last36MJewelrySpendUSD__c.field-meta.xml
<CustomField>
    <fullName>Last36MJewelrySpendUSD__c</fullName>
    <label>Last 36M Jewelry Spend (USD)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>