force-app/main/default/objects/Contact/fields/Last36MLeatherGoodNbrProducts__c.field-meta.xml
<CustomField>
    <fullName>Last36MLeatherGoodNbrProducts__c</fullName>
    <label>Last 36M Leather Good # Products</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>