force-app/main/default/objects/Contact/fields/Last36MLeatherGoodSpendEUR__c.field-meta.xml
<CustomField>
    <fullName>Last36MLeatherGoodSpendEUR__c</fullName>
    <label>Last 36M Leather Good Spend (EUR)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>