force-app/main/default/objects/Contact/fields/Last36MLeatherGoodSpendYEN__c.field-meta.xml
<CustomField>
    <fullName>Last36MLeatherGoodSpendYEN__c</fullName>
    <label>Last 36M Leather Good Spend (YEN)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>