force-app/main/default/objects/Contact/fields/Last36MNbrProducts__c.field-meta.xml
<CustomField>
    <fullName>Last36MNbrProducts__c</fullName>
    <label>Last 36M # Products</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>