force-app/main/default/objects/Contact/fields/Last36MPerfumeSpendYEN__c.field-meta.xml
<CustomField>
    <fullName>Last36MPerfumeSpendYEN__c</fullName>
    <label>Last 36M Perfume Spend (YEN)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>