force-app/main/default/objects/Contact/fields/Last36MReadyToWearSpendUSD__c.field-meta.xml
<CustomField>
    <fullName>Last36MReadyToWearSpendUSD__c</fullName>
    <label>Last 36M Ready to Wear Spend (USD)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>