force-app/main/default/objects/Contact/fields/Last36MShoesNbrProducts__c.field-meta.xml
<CustomField>
    <fullName>Last36MShoesNbrProducts__c</fullName>
    <label>Last 36M Shoes # Products</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>