force-app/main/default/objects/Contact/fields/Last36MShoesSpendEUR__c.field-meta.xml
<CustomField>
    <fullName>Last36MShoesSpendEUR__c</fullName>
    <label>Last 36M Shoes Spend (EUR)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>