force-app/main/default/objects/Contact/fields/Last36MShoesSpendUSD__c.field-meta.xml
<CustomField>
    <fullName>Last36MShoesSpendUSD__c</fullName>
    <label>Last 36M Shoes Spend (USD)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>