force-app/main/default/objects/Contact/fields/Last36MShoesSpendYUAN__c.field-meta.xml
<CustomField>
    <fullName>Last36MShoesSpendYUAN__c</fullName>
    <label>Last 36M Shoes Spend (RMB)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>