force-app/main/default/objects/Contact/fields/Last36MSpendYEN__c.field-meta.xml
<CustomField>
    <fullName>Last36MSpendYEN__c</fullName>
    <label>Last 36M Spend (YEN)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>