force-app/main/default/objects/Contact/fields/Last36MWatchSpendYEN__c.field-meta.xml
<CustomField>
    <fullName>Last36MWatchSpendYEN__c</fullName>
    <label>Last 36M Watch Spend (YEN)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>