force-app/main/default/objects/Contact/fields/LastAppointmentDate__c.field-meta.xml
<CustomField>
    <fullName>LastAppointmentDate__c</fullName>
    <label>Last Appointment Date</label>
    <type>Date</type>
</CustomField>