force-app/main/default/objects/Contact/fields/LastContactDate__c.field-meta.xml
<CustomField>
    <fullName>LastContactDate__c</fullName>
    <description>Contains the date at which there has been the last contact 
•	one To-do not received from DREAM with 
o	an activity Date in the last 30 days (today included) 
o	action type equals to Email, Phone, SMS or Mobile Chat 
•	one Appointment with an activity date in the last 30 days (today included)</description>
    <label>Last Contact Date</label>
    <type>Date</type>
</CustomField>