force-app/main/default/objects/Contact/fields/LastCSCClientContact__c.field-meta.xml
<CustomField>
    <fullName>LastCSCClientContact__c</fullName>
    <description>Client service last contact date including email and call as well</description>
    <label>Last CSC client contact</label>
    <type>Date</type>
</CustomField>