force-app/main/default/objects/Contact/fields/LastNameOrigin__c.field-meta.xml
<CustomField>
    <fullName>LastNameOrigin__c</fullName>
    <label>Lastname origin</label>
    <length>50</length>
    <type>Text</type>
</CustomField>