force-app/main/default/objects/Contact/fields/LastVoiceDate__c.field-meta.xml
<CustomField>
    <fullName>LastVoiceDate__c</fullName>
    <description>Date of last Voice submitted by the client. This field is updated by a trigger on the Survey Object</description>
    <label>Last Voice Date</label>
    <type>Date</type>
</CustomField>