force-app/main/default/objects/Contact/fields/LastVoiceType__c.field-meta.xml
<CustomField>
    <fullName>LastVoiceType__c</fullName>
    <label>Last Voice Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Promoter</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Recovery Act</fullName>
            </value>
            <value>
                <fullName>No Action</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>