force-app/main/default/objects/Contact/fields/LeatherGoodsInterest__c.field-meta.xml
<CustomField>
    <fullName>LeatherGoodsInterest__c</fullName>
    <description>Leather Goods Interest</description>
    <label>Leather Goods</label>
    <length>80</length>
    <type>Text</type>
</CustomField>