force-app/main/default/objects/Contact/fields/LocalHomePhone__c.field-meta.xml
<CustomField>
    <fullName>LocalHomePhone__c</fullName>
    <description>Stores the local Home Phone number</description>
    <label>Local Home Phone</label>
    <type>Phone</type>
</CustomField>