force-app/main/default/objects/Contact/fields/LocalLoginPhone__c.field-meta.xml
<CustomField>
    <fullName>LocalLoginPhone__c</fullName>
    <label>Local Login Phone</label>
    <type>Phone</type>
</CustomField>