force-app/main/default/objects/Contact/fields/LocalMobilePhone__c.field-meta.xml
<CustomField>
    <fullName>LocalMobilePhone__c</fullName>
    <description>Stores the local Mobile Phone</description>
    <label>Local Mobile Phone</label>
    <type>Phone</type>
</CustomField>