force-app/main/default/objects/Contact/fields/LocalWorkPhone__c.field-meta.xml
<CustomField>
    <fullName>LocalWorkPhone__c</fullName>
    <description>Stores the local Work Phone</description>
    <label>Local Work Phone</label>
    <type>Phone</type>
</CustomField>