force-app/main/default/objects/Contact/fields/LoginPhone__c.field-meta.xml
<CustomField>
    <fullName>LoginPhone__c</fullName>
    <label>Login Phone</label>
    <type>Phone</type>
</CustomField>