force-app/main/default/objects/Contact/fields/LoginPhoneCallingCode__c.field-meta.xml
<CustomField>
    <fullName>LoginPhoneCallingCode__c</fullName>
    <label>Login Phone - Calling Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>