force-app/main/default/objects/Contact/fields/LoginPhoneCountryCode__c.field-meta.xml
<CustomField>
    <fullName>LoginPhoneCountryCode__c</fullName>
    <label>Login Phone - Country Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>