force-app/main/default/objects/Contact/fields/MobilePhoneCountryCallingCode__c.field-meta.xml
<CustomField>
    <fullName>MobilePhoneCountryCallingCode__c</fullName>
    <description>Ex: 33</description>
    <label>Mobile Phone - Country Calling Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>