force-app/main/default/objects/Contact/fields/MobilePhoneCountryCode__c.field-meta.xml
<CustomField>
    <fullName>MobilePhoneCountryCode__c</fullName>
    <label>Mobile Phone – Country Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>