force-app/main/default/objects/Contact/fields/Nationality__c.field-meta.xml
<CustomField>
    <fullName>Nationality__c</fullName>
    <label>Nationality / Passeport</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Afghan</fullName>
            </value>
            <value>
                <fullName>Albanian</fullName>
            </value>
            <value>
                <fullName>Algerian</fullName>
            </value>
            <value>
                <fullName>American Samoa</fullName>
            </value>
            <value>
                <fullName>American Virgin Islands US</fullName>
            </value>
            <value>
                <fullName>Andora</fullName>
            </value>
            <value>
                <fullName>Angola</fullName>
            </value>
            <value>
                <fullName>Anguilla</fullName>
            </value>
            <value>
                <fullName>Antartica</fullName>
            </value>
            <value>
                <fullName>Antigua &amp; Barbuda</fullName>
            </value>
            <value>
                <fullName>Argentinian</fullName>
            </value>
            <value>
                <fullName>Armenian</fullName>
            </value>
            <value>
                <fullName>Aruba</fullName>
            </value>
            <value>
                <fullName>Australian</fullName>
            </value>
            <value>
                <fullName>Austrian</fullName>
            </value>
            <value>
                <fullName>Azerbaijan</fullName>
            </value>
            <value>
                <fullName>Bahamas</fullName>
            </value>
            <value>
                <fullName>Bahrain</fullName>
            </value>
            <value>
                <fullName>Bangladeshi</fullName>
            </value>
            <value>
                <fullName>Barbados</fullName>
            </value>
            <value>
                <fullName>Belarus</fullName>
            </value>
            <value>
                <fullName>Belgian</fullName>
            </value>
            <value>
                <fullName>Belize</fullName>
            </value>
            <value>
                <fullName>Benin</fullName>
            </value>
            <value>
                <fullName>Bermuda</fullName>
            </value>
            <value>
                <fullName>Bhutan</fullName>
            </value>
            <value>
                <fullName>Bolivian</fullName>
            </value>
            <value>
                <fullName>Bosnia-Herzegovina</fullName>
            </value>
            <value>
                <fullName>Botswana</fullName>
            </value>
            <value>
                <fullName>Bouvet Island</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>